Fix PWA: Add service worker registration, relative paths, and proper icons

--- a/quantum-ultimate/index.html
+++ b/quantum-ultimate/index.html
@@ -23,7 +23,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&family=Exo+2:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   
   <!-- Manifest -->
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="./manifest.json">
+  <link rel="icon" type="image/svg+xml" href="./icon-512.svg">
+  <link rel="apple-touch-icon" href="./icon-192.svg">
   
   <title>Quantum Reality Code - Manifestation Portal</title>
   
@@ -1609,5 +1611,21 @@
 
   <!-- Main JavaScript -->
   <script src="app.js"></script>
+  
+  <!-- Service Worker Registration -->
+  <script>
+    // Register Service Worker for PWA
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('./sw.js')
+          .then((registration) => {
+            console.log('✅ Service Worker registered:', registration.scope);
+          })
+          .catch((error) => {
+            console.log('❌ Service Worker registration failed:', error);
+          });
+      });
+    }
+  </script>
 </body>
 </html>
