Add missing continue button to step 4 of intention wizard

--- a/quantum-ultimate/intention-wizard.html
+++ b/quantum-ultimate/intention-wizard.html
@@ -887,6 +887,12 @@ What do you see when you wake up? How do you feel throughout the day? What no lo
         <div class="emotion-tag" onclick="toggleEmotion(this)">🕊️ Relief</div>
       </div>
       
+      <div class="nav-buttons">
+        <button class="btn btn-back" onclick="prevStep()">← Back</button>
+        <button class="btn btn-next" id="step4Next" onclick="nextStep()" disabled>Continue →</button>
+      </div>
+    </div>
+    
     <!-- STEP 5: Obstacles / Blocks -->
     <div class="step" id="step-5">
       <div class="guide-message">
