--- a/quantum-ultimate/index.html
+++ b/quantum-ultimate/index.html
@@ -1043,6 +1043,186 @@
       padding: 10px 0;
     }
 
+    /* Thread List Styles */
+    .thread-item {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      padding: 16px 20px;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
+
+    .thread-item:hover {
+      background: rgba(0, 245, 255, 0.1);
+    }
+
+    .thread-avatar {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      background: var(--gradient-primary);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 24px;
+      flex-shrink: 0;
+      box-shadow: var(--glow-cyan);
+    }
+
+    .thread-content {
+      flex: 1;
+    }
+
+    .thread-title {
+      font-family: 'Orbitron', sans-serif;
+      font-size: 16px;
+      color: var(--neon-cyan);
+      margin-bottom: 4px;
+    }
+
+    .thread-preview {
+      font-size: 14px;
+      color: var(--text-secondary);
+      line-height: 1.4;
+    }
+
+    .thread-meta {
+      text-align: right;
+      font-size: 12px;
+      color: var(--text-muted);
+    }
+
+    .thread-time {
+      margin-bottom: 4px;
+    }
+
+    .thread-count {
+      background: var(--neon-cyan);
+      color: #000;
+      padding: 2px 8px;
+      border-radius: 10px;
+      font-size: 11px;
+      font-weight: 600;
+    }
+
+    .no-threads {
+      text-align: center;
+      padding: 60px 20px;
+      color: var(--text-secondary);
+    }
+
+    .no-threads-icon {
+      font-size: 48px;
+      margin-bottom: 20px;
+      opacity: 0.5;
+    }
+
+    .no-threads-text {
+      font-size: 18px;
+      margin-bottom: 10px;
+    }
+
+    .no-threads-subtext {
+      font-size: 14px;
+      opacity: 0.7;
+    }
+
+    /* Thread Chat Styles */
+    .thread-header {
+      display: flex;
+      align-items: center;
+      gap: 16px;
+      padding: 16px 20px;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+      background: var(--bg-card);
+    }
+
+    .back-to-threads {
+      background: transparent;
+      border: 2px solid rgba(255, 255, 255, 0.3);
+      color: var(--text-secondary);
+      padding: 8px 16px;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 14px;
+      transition: all 0.3s ease;
+    }
+
+    .back-to-threads:hover {
+      border-color: var(--neon-cyan);
+      color: var(--neon-cyan);
+    }
+
+    .thread-code {
+      font-family: 'Orbitron', sans-serif;
+      font-size: 18px;
+      color: var(--neon-cyan);
+    }
+
+    .thread-intention {
+      background: var(--bg-card);
+      border: 1px solid rgba(0, 245, 255, 0.2);
+      border-radius: 12px;
+      padding: 16px 20px;
+      margin: 16px 20px;
+    }
+
+    .intention-label {
+      font-family: 'Orbitron', sans-serif;
+      font-size: 14px;
+      color: var(--neon-gold);
+      margin-bottom: 8px;
+    }
+
+    .intention-text {
+      font-size: 16px;
+      color: var(--text-primary);
+      line-height: 1.5;
+    }
+
+    .chat-messages {
+      padding: 0 20px;
+      max-height: calc(100vh - 400px);
+      overflow-y: auto;
+    }
+
+    .typing-indicator {
+      display: flex;
+      gap: 12px;
+      margin-bottom: 20px;
+      animation: messageSlide 0.4s ease;
+    }
+
+    .typing-indicator span {
+      width: 8px;
+      height: 8px;
+      border-radius: 50%;
+      background: var(--neon-cyan);
+      animation: typing 1.4s infinite ease-in-out;
+    }
+
+    .typing-indicator span:nth-child(1) { animation-delay: -0.32s; }
+    .typing-indicator span:nth-child(2) { animation-delay: -0.16s; }
+
+    @keyframes typing {
+      0%, 80%, 100% { transform: scale(0); opacity: 0.5; }
+      40% { transform: scale(1); opacity: 1; }
+    }
+
+    .message-bubble {
+      display: flex;
+      gap: 12px;
+      margin-bottom: 20px;
+      animation: messageSlide 0.4s ease;
+    }
+
+    @keyframes messageSlide {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
     .message-bubble {
       display: flex;
       gap: 12px;
