Optimize mobile UI and messaging experience
- Reduce welcome section padding to close gap before community section
- Make bottom navigation bar more compact for mobile devices
- Smaller nav icons (20px) and labels (9px) for better fit on small screens
- Disable auto-scroll on messages so conversations start at top like normal texting apps
- Increase footer padding for full visibility of both Facebook and Telegram buttons
- Adjust container padding to match new navigation bar size

--- a/quantum-ultimate/index.html
+++ b/quantum-ultimate/index.html
@@ -281,7 +281,7 @@
       opacity: 0;
       transition: opacity 0.5s ease;
       padding-top: var(--safe-area-top);
-      padding-bottom: calc(80px + var(--safe-area-bottom));
+      padding-bottom: calc(65px + var(--safe-area-bottom));
       height: auto;
     }
 
@@ -394,7 +394,7 @@
       padding: 20px;
       overflow-y: auto;
       min-height: 0;
-      padding-bottom: 100px; /* Extra space for footer visibility */
+      padding-bottom: 120px; /* Extra space for footer visibility */
     }
 
     /* Page sections - hidden by default */
@@ -419,7 +419,7 @@
     .welcome-section {
       text-align: center;
       padding: 20px 0;
-      padding-bottom: 60px; /* Extra space for scrolling */
+      padding-bottom: 40px;
     }
 
     .welcome-header {
@@ -1706,8 +1706,8 @@
       backdrop-filter: blur(20px);
       -webkit-backdrop-filter: blur(20px);
       border-top: 1px solid rgba(0, 245, 255, 0.2);
-      padding: 10px 20px;
-      padding-bottom: calc(10px + var(--safe-area-bottom));
+      padding: 8px 10px;
+      padding-bottom: calc(8px + var(--safe-area-bottom));
       display: flex;
       justify-content: space-around;
       z-index: 100;
@@ -1717,8 +1717,8 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 4px;
-      padding: 8px 16px;
+      gap: 2px;
+      padding: 6px 12px;
       border-radius: 12px;
       cursor: pointer;
       transition: all 0.3s ease;
@@ -1737,14 +1737,14 @@
     }
 
     .nav-icon {
-      font-size: 22px;
+      font-size: 20px;
     }
 
     .nav-label {
-      font-size: 10px;
+      font-size: 9px;
       font-weight: 500;
       text-transform: uppercase;
-      letter-spacing: 0.5px;
+      letter-spacing: 0.3px;
     }
 
     /* ============================================
