Add Crisis Support System with emergency detection, helpline resources, and grounding techniques

--- a/quantum-ultimate/index.html
+++ b/quantum-ultimate/index.html
@@ -3361,6 +3361,102 @@
         </div>
       </section>
 
+      <!-- Help & Resources Section -->
+      <section class="page-section" id="helpSection">
+        <div class="help-section">
+          <div class="section-header">
+            <h2>🆘 Support & Resources</h2>
+            <p>You are not alone - help is always available</p>
+          </div>
+
+          <!-- Crisis Support Card -->
+          <div style="background: linear-gradient(135deg, rgba(255, 69, 0, 0.08), rgba(255, 0, 0, 0.08)); border: 2px solid rgba(255, 69, 0, 0.3); border-radius: 16px; padding: 25px; margin-bottom: 30px;">
+            <div style="display: flex; align-items: center; gap: 15px; margin-bottom: 20px;">
+              <div style="font-size: 40px;">🆘</div>
+              <div>
+                <div style="font-size: 20px; color: #ff4500; font-family: 'Orbitron', sans-serif; font-weight: bold;">Crisis Support</div>
+                <div style="font-size: 14px; color: var(--text-secondary);">Available 24/7 - Free & Confidential</div>
+              </div>
+            </div>
+
+            <div style="background: rgba(0, 0, 0, 0.3); padding: 20px; border-radius: 12px; margin-bottom: 15px;">
+              <div style="font-size: 16px; color: var(--text-primary); margin-bottom: 15px; font-weight: bold;">🚨 If you're in crisis or thinking about suicide:</div>
+              <div style="display: flex; flex-direction: column; gap: 12px;">
+                <div style="background: rgba(255, 69, 0, 0.2); padding: 15px; border-radius: 8px; border-left: 4px solid #ff4500;">
+                  <div style="font-size: 18px; color: var(--neon-cyan); font-family: 'Orbitron', sans-serif; margin-bottom: 5px;">📞 988 - Suicide & Crisis Lifeline</div>
+                  <div style="font-size: 13px; color: var(--text-secondary);">Call or text 988 (United States)</div>
+                </div>
+                <div style="background: rgba(255, 69, 0, 0.2); padding: 15px; border-radius: 8px; border-left: 4px solid #ff4500;">
+                  <div style="font-size: 18px; color: var(--neon-cyan); font-family: 'Orbitron', sans-serif; margin-bottom: 5px;">💬 Crisis Text Line</div>
+                  <div style="font-size: 13px; color: var(--text-secondary);">Text HOME to 741741</div>
+                </div>
+                <div style="background: rgba(255, 69, 0, 0.2); padding: 15px; border-radius: 8px; border-left: 4px solid #ff4500;">
+                  <div style="font-size: 18px; color: var(--neon-cyan); font-family: 'Orbitron', sans-serif; margin-bottom: 5px;">🌍 International Support</div>
+                  <div style="font-size: 13px; color: var(--text-secondary);"><a href="https://findahelpline.com" target="_blank" style="color: var(--neon-cyan);">findahelpline.com</a></div>
+                </div>
+              </div>
+            </div>
+
+            <div style="background: rgba(255, 69, 0, 0.1); padding: 15px; border-radius: 8px; font-size: 14px; color: var(--text-primary); line-height: 1.6;">
+              <strong>⚠️ Important:</strong> This app is for manifestation support, not crisis intervention. If you're having thoughts of self-harm or suicide, please call 988 or go to your nearest emergency room immediately. Your life matters.
+            </div>
+          </div>
+
+          <!-- Mental Health Resources -->
+          <div style="background: linear-gradient(135deg, rgba(0, 168, 255, 0.08), rgba(0, 245, 255, 0.08)); border: 2px solid rgba(0, 245, 255, 0.2); border-radius: 16px; padding: 25px; margin-bottom: 30px;">
+            <div style="font-size: 18px; color: var(--neon-cyan); font-family: 'Orbitron', sans-serif; margin-bottom: 20px;">💙 Mental Health Support</div>
+            
+            <div style="display: flex; flex-direction: column; gap: 15px;">
+              <div style="background: rgba(0, 245, 255, 0.05); padding: 15px; border-radius: 8px;">
+                <div style="font-size: 15px; color: var(--text-primary); font-weight: bold; margin-bottom: 5px;">SAMHSA National Helpline</div>
+                <div style="font-size: 14px; color: var(--neon-cyan); margin-bottom: 3px;">1-800-662-4357</div>
+                <div style="font-size: 12px; color: var(--text-secondary);">Free, confidential, 24/7 treatment referral and information service</div>
+              </div>
+
+              <div style="background: rgba(0, 245, 255, 0.05); padding: 15px; border-radius: 8px;">
+                <div style="font-size: 15px; color: var(--text-primary); font-weight: bold; margin-bottom: 5px;">NAMI Helpline</div>
+                <div style="font-size: 14px; color: var(--neon-cyan); margin-bottom: 3px;">1-800-950-6264</div>
+                <div style="font-size: 12px; color: var(--text-secondary);">Mental health information and support (Mon-Fri, 10am-10pm ET)</div>
+              </div>
+
+              <div style="background: rgba(0, 245, 255, 0.05); padding: 15px; border-radius: 8px;">
+                <div style="font-size: 15px; color: var(--text-primary); font-weight: bold; margin-bottom: 5px;">Warmline Directory</div>
+                <div style="font-size: 14px; color: var(--neon-cyan); margin-bottom: 3px;"><a href="https://warmline.org" target="_blank" style="color: var(--neon-cyan);">warmline.org</a></div>
+                <div style="font-size: 12px; color: var(--text-secondary);">Peer support for emotional distress (non-crisis)</div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Grounding Techniques -->
+          <div style="background: linear-gradient(135deg, rgba(0, 200, 100, 0.08), rgba(0, 255, 150, 0.08)); border: 2px solid rgba(0, 200, 100, 0.3); border-radius: 16px; padding: 25px;">
+            <div style="font-size: 18px; color: #00c864; font-family: 'Orbitron', sans-serif; margin-bottom: 20px;">🌿 Quick Grounding Techniques</div>
+            
+            <div style="display: flex; flex-direction: column; gap: 20px;">
+              <div>
+                <div style="font-size: 15px; color: var(--text-primary); font-weight: bold; margin-bottom: 10px;">5-4-3-2-1 Grounding</div>
+                <div style="font-size: 13px; color: var(--text-secondary); line-height: 1.6;">
+                  Name 5 things you see • 4 things you can touch • 3 things you hear • 2 things you smell • 1 thing you taste
+                </div>
+              </div>
+
+              <div>
+                <div style="font-size: 15px; color: var(--text-primary); font-weight: bold; margin-bottom: 10px;">Box Breathing</div>
+                <div style="font-size: 13px; color: var(--text-secondary); line-height: 1.6;">
+                  Breathe in for 4 counts • Hold for 4 counts • Breathe out for 4 counts • Hold for 4 counts • Repeat 4 times
+                </div>
+              </div>
+
+              <div>
+                <div style="font-size: 15px; color: var(--text-primary); font-weight: bold; margin-bottom: 10px;">Physical Grounding</div>
+                <div style="font-size: 13px; color: var(--text-secondary); line-height: 1.6;">
+                  Press your feet firmly into the floor • Feel the chair supporting you • Hold something cold or textured • Splash cold water on your face
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <!-- Achievements Section -->
       <section class="page-section" id="achievementsSection">
         <div class="achievements-section">
@@ -3401,6 +3497,10 @@
       <button class="nav-item" data-section="wins" onclick="app.navigate('wins')">
         <span class="nav-icon">🎉</span>
         <span class="nav-label">Wins</span>
+      </button>
+      <button class="nav-item" data-section="help" onclick="app.navigate('help')">
+        <span class="nav-icon">🆘</span>
+        <span class="nav-label">Help</span>
       </button>
       <button class="nav-item" data-section="achievements" onclick="app.navigate('achievements')">
         <span class="nav-icon">🏆</span>
