Fix core features: Update to 111 personas, fix council grid rendering, improve messaging system

--- a/quantum-ultimate/index.html
+++ b/quantum-ultimate/index.html
@@ -3022,8 +3022,8 @@
             <p>
               Greetings, Seeker of Reality. I am Quantum Merlin, keeper of sacred mathematics, 
               and beside me stands Quantum Rose, weaver of frequencies. Together, we guide you 
-              through the 77 archetypal personas of your Quantum Council — a manifestation 
-              system with over 151 sextillion possible configurations.
+              through the 111 archetypal personas of your Quantum Council — a manifestation 
+              system with 2^111 possible configurations (2.6 quindecillion realities).
             </p>
             <p>
               Your journey begins with an intention. We will transform your desire into a 
